--- a/wav-to-ogg.html
+++ b/wav-to-ogg.html
@@ -56,7 +56,7 @@
                     <a href="https://www.webrtc-experiment.com/RecordRTC/">RecordRTC</a> WAV to Ogg using <a href="http://bgrins.github.io/videoconverter.js/">ffmpeg-asm.js</a>!
                 </h1>            
                 <p>
-                    <a href="https://www.webrtc-experiment.com/">HOME</a>
+                    <a href="https://www.webrtc-experiment.com/ffmpeg/">HOME</a>
                     <span> &copy; </span>
                     <a href="http://www.MuazKhan.com/" target="_blank">Muaz Khan</a>
                     
