--- a/video-cropping.html
+++ b/video-cropping.html
@@ -6,7 +6,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>RecordRTC WAV to ACC using ffmpeg-asm.js</title>
+        <title>RecordRTC Video Cropping using ffmpeg-asm.js ® Muaz Khan</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -17,7 +17,10 @@
         <link rel="stylesheet" href="https://cdn.webrtc-experiment.com/style.css">
 
         <style>
-            audio { vertical-align: middle; }
+            video {
+                vertical-align: bottom;
+                width: 300px;
+            }
 
             input {
                 border: 1px solid #d9d9d9;
@@ -53,7 +56,7 @@
         <article>
             <header style="text-align: center;">
                 <h1>
-                    <a href="https://www.webrtc-experiment.com/RecordRTC/">RecordRTC</a> WAV to ACC using <a href="http://bgrins.github.io/videoconverter.js/">ffmpeg-asm.js</a>!
+                    <a href="https://www.webrtc-experiment.com/RecordRTC/">RecordRTC</a> Video Cropping using <a href="http://bgrins.github.io/videoconverter.js/">ffmpeg-asm.js</a>!
                 </h1>
                 <p>
                     <a href="https://www.webrtc-experiment.com/ffmpeg/">HOME</a>
@@ -80,76 +83,61 @@
                 <h2 class="header">Logs</h2>
                 <ol id="logs-preview">
                     <li>
-                        <a href="https://www.webrtc-experiment.com/RecordRTC/">RecordRTC</a> experiment converting WAV to ACC inside the browser!
+                        <a href="https://www.webrtc-experiment.com/RecordRTC/">RecordRTC</a> experiment crops video inside the browser!
                     </li>
                 </ol>
             </section>
 
             <section class="experiment">
-                <h2 class="header">Record Audio and convert into "ACC" using <a href="https://archive.org/download/ffmpeg_asm/ffmpeg_asm.js" download="ffmpeg-asm.js">ffmpeg-asm.js</a>!</h2>
+                <h2 class="header">Record Video and convert into "mp4" using <a href="https://archive.org/download/ffmpeg_asm/ffmpeg_asm.js" download="ffmpeg-asm.js">ffmpeg-asm.js</a>!</h2>
 
                 <div class="inner">
-                    <audio id="audio-preview" controls muted></audio>
+                    <button id="record-video">Record</button>
+                    <button id="stop-recording-video" disabled>Stop</button>
                     <br>
-                    <button id="record-audio">Record</button>
-                    <button id="stop-recording-audio" disabled>Stop</button>
+                    <video id="video-preview" controls></video>
                     <br>
                 </div>
             </section>
             <script>
-                var recordAudio;
-                var audioPreview = document.getElementById('audio-preview');
+                var recordVideo;
+                var videoPreview = document.getElementById('video-preview');
                 var inner = document.querySelector('.inner');
 
-                document.querySelector('#record-audio').onclick = function() {
+                document.querySelector('#record-video').onclick = function() {
                     this.disabled = true;
                     navigator.getUserMedia({
-                            audio: true
+                            video: true
                         }, function(stream) {
-                            audioPreview.src = window.URL.createObjectURL(stream);
-                            audioPreview.play();
+                            videoPreview.src = window.URL.createObjectURL(stream);
+                            videoPreview.play();
 
-                            recordAudio = RecordRTC(stream, {
-                                bufferSize: 16384,
-                                recorderType: StereoAudioRecorder
+                            recordVideo = RecordRTC(stream, {
+                                type: 'video',
+                                // recorderType: !!navigator.mozGetUserMedia ? MediaStreamRecorder : WhammyRecorder
                             });
 
-                            recordAudio.startRecording();
+                            recordVideo.startRecording();
                         }, function(error) { throw error;});
-                    document.querySelector('#stop-recording-audio').disabled = false;
+                    document.querySelector('#stop-recording-video').disabled = false;
                 };
 
-                document.querySelector('#stop-recording-audio').onclick = function() {
+                document.querySelector('#stop-recording-video').onclick = function() {
                     this.disabled = true;
 
-                    recordAudio.stopRecording(function(url) {
-                        if(!!navigator.mozGetUserMedia) { // remove this if-block if you still want to use ffmpeg-asm.js in Firefox.
-                            log('We do not need to use ffmpeg-asm.js in Firefox.');
-                            log('If you are still interested to use ffmpeg-asm.js in Firefox then set <a href="https://github.com/muaz-khan/RecordRTC#recordertype">this recorderType</a> parameter.');
-                            log('E.g. <code>recordAudio = RecordRTC(stream, { recordertype: StereoAudioRecorder });</code>');
-
-                            var blob = new File([recordAudio.blob], 'test.mp3', {
-                                type:' audio/mp3'
-                            });
-                            audioPreview.src = URL.createObjectURL(blob);
-                            audioPreview.download = 'Orignal.mp3';
-
-                            PostBlob(blob);
-                            return;
-                        }
-
-                        audioPreview.src = url;
-                        audioPreview.download = 'Orignal.wav';
+                    recordVideo.stopRecording(function(url) {
+                        videoPreview.src = url;
+                        videoPreview.download = 'video.webm';
 
                         log('<a href="'+ workerPath +'" download="ffmpeg-asm.js">ffmpeg-asm.js</a> file download started. It is about 18MB in size; please be patient!');
-                        convertStreams(recordAudio.getBlob());
+                        convertStreams(recordVideo.getBlob());
                     });
                 };
 
                 var workerPath = 'https://archive.org/download/ffmpeg_asm/ffmpeg_asm.js';
-				if(document.domain == 'localhost') {
-					workerPath = location.href.replace(location.href.split('/').pop(), '') + 'ffmpeg_asm.js';
-				}
+                if(document.domain == 'localhost') {
+                    workerPath = location.href.replace(location.href.split('/').pop(), '') + 'ffmpeg_asm.js';
+                }
 
                 function processInWebWorker() {
                     var blob = URL.createObjectURL(new Blob(['importScripts("' + workerPath + '");var now = Date.now;function print(text) {postMessage({"type" : "stdout","data" : text});};onmessage = function(event) {var message = event.data;if (message.type === "command") {var Module = {print: print,printErr: print,files: message.files || [],arguments: message.arguments || [],TOTAL_MEMORY: message.TOTAL_MEMORY || false};postMessage({"type" : "start","data" : Module.arguments.join(" ")});postMessage({"type" : "stdout","data" : "Received command: " +Module.arguments.join(" ") +((Module.TOTAL_MEMORY) ? ".  Processing with " + Module.TOTAL_MEMORY + " bits." : "")});var time = now();var result = ffmpeg_run(Module);var totalTime = now() - time;postMessage({"type" : "stdout","data" : "Finished processing (took " + totalTime + "ms)"});postMessage({"type" : "done","data" : result,"time" : totalTime});}};postMessage({"type" : "ready"});'], {
@@ -163,7 +151,7 @@
 
                 var worker;
 
-                function convertStreams(audioBlob) {
+                function convertStreams(videoBlob) {
                     var aab;
                     var buffersReady;
                     var workerReady;
@@ -174,7 +162,7 @@
                         aab = this.result;
                         postMessage();
                     };
-                    fileReader.readAsArrayBuffer(audioBlob);
+                    fileReader.readAsArrayBuffer(videoBlob);
 
                     if (!worker) {
                         worker = processInWebWorker();
@@ -198,8 +186,8 @@
                             var result = message.data[0];
                             log(JSON.stringify(result));
 
-                            var blob = new File([result.data], 'test.mp3', {
-                                type: 'audio/mp3'
+                            var blob = new File([result.data], 'test.mp4', {
+                                type: 'video/mp4'
                             });
 
                             log(JSON.stringify(blob));
@@ -212,12 +200,11 @@
 
                         worker.postMessage({
                             type: 'command',
-                            arguments: '',
-                            arguments: '-i audio.wav -c:a aac -b:a 96k -strict experimental output.mp4'.split(' '),
+                            arguments: '-i video.webm -vf scale=3840:2160 -c:v mpeg4 -b:v 6400k -filter:v crop=in_w-60:in_h-60:30:30 -c:a copy output.mp4'.split(' '),
                             files: [
                                 {
                                     data: new Uint8Array(aab),
-                                    name: "audio.wav"
+                                    name: 'video.webm'
                                 }
                             ]
                         });
@@ -225,28 +212,28 @@
                 }
 
                 function PostBlob(blob) {
-                    var audio = document.createElement('audio');
-                    audio.controls = true;
+                    var video = document.createElement('video');
+                    video.controls = true;
 
                     var source = document.createElement('source');
                     source.src = URL.createObjectURL(blob);
-                    source.type = 'audio/mp3; codecs=aac';
-                    audio.appendChild(source);
+                    source.type = 'video/mp4; codecs=mpeg4';
+                    video.appendChild(source);
 
-                    audio.download = 'Converted Audio.mp3';
+                    video.download = 'Play mp4 in VLC Player.mp4';
 
                     inner.appendChild(document.createElement('hr'));
                     var h2 = document.createElement('h2');
-                    h2.innerHTML = '<a href="' + source.src + '" target="_blank" download="Converted Audio.mp3" style="font-size:200%;color:red;">Download Converted AAC:</a>';
+                    h2.innerHTML = '<a href="' + source.src + '" target="_blank" download="Play mp4 in VLC Player.mp4" style="font-size:200%;color:red;">Download Converted mp4 and play in VLC player!</a>';
                     inner.appendChild(h2);
                     h2.style.display = 'block';
-                    inner.appendChild(audio);
+                    inner.appendChild(video);
 
-                    audio.tabIndex = 0;
-                    audio.focus();
-                    audio.play();
+                    video.tabIndex = 0;
+                    video.focus();
+                    video.play();
 
-                    document.querySelector('#record-audio').disabled = false;
+                    document.querySelector('#record-video').disabled = false;
                 }
 
                 var logsPreview = document.getElementById('logs-preview');
@@ -261,7 +248,7 @@
                 }
 
                 window.onbeforeunload = function() {
-                    document.querySelector('#record-audio').disabled = false;
+                    document.querySelector('#record-video').disabled = false;
                 };
             </script>
 
@@ -305,7 +292,7 @@
             </section>
 
             <section class="experiment own-widgets latest-commits">
-                <h2 class="header" id="updates" style="color: red; padding-bottom: .1em;"><a href="https://github.com/muaz-khan/Ffmpeg.js/commits/master" target="_blank">Latest Updates</a></h2>
+                <h2 class="header" id="updates" style="color: red; padding-bottom: .1em;"><a href="https://github.com/muaz-khan/WebRTC-Experiment/commits/master" target="_blank">Latest Updates</a></h2>
                 <div id="github-commits"></div>
             </section>
         </article>
